// Usuário
Table Usuario {
    id BIGINT [pk, increment]
    nome_usuario varchar(255) [not null, unique]
    criado_em timestamp [default: `now()`]
    id_perfil BIGINT [ref: > Perfil.id]
    id_pessoa_fisica BIGINT [ref: > Pessoa_Fisica.id]
    id_pessoa_juridica BIGINT [ref: > Pessoa_Juridica.id]
    id_endereco BIGINT [ref: > Endereco.id]
    id_email BIGINT [ref: > Email.id]
    id_senha BIGINT [not null, ref: > Senha.id]
    id_tipo_usuario BIGINT [not null, ref: > Tipo_Usuario.id]
}

Table Tipo_Usuario {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

// Dados do usuário
Table Perfil {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

Table Pessoa_Fisica {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    cpf varchar(255) [not null]
}

Table Pessoa_Juridica {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    cnpj varchar(255) [not null]
}

Table Endereco {
    id BIGINT [pk, increment]
    rua varchar(255) [not null]
    numero BIGINT [not null]
    complemento varchar(255)
    bairro varchar(255) [not null]
    cidade varchar(255) [not null]
    estado varchar(255) [not null]
    cep varchar(255) [not null]
    latitude varchar(255) [not null]
    longitude varchar(255) [not null]
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
}

Table Email {
    id BIGINT [pk, increment]
    valor varchar(255) [not null]
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
    validado boolean [not null]
}

Table Senha {
    id BIGINT [pk, increment]
    valor varchar(255) [not null]
    chave varchar(255) [not null]
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
}

// Chaves de acesso
Table Auth_Token {
    id BIGINT [pk, increment]
    token varchar(255) [not null, unique]
    criado_em timestamp [default: `now()`]
    expira_em timestamp [not null]
    id_usuario BIGINT [not null, ref: > Usuario.id]
}

Table WebService_Token {
    id BIGINT [pk, increment]
    token varchar(255) [not null, unique]
    criado_em timestamp [default: `now()`]
    expira_em timestamp
    ativo boolean [not null]
    id_usuario BIGINT [not null, ref: > Usuario.id]
}

// Eventos
Table Evento {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
    data_inicial timestamp [not null]
    data_final timestamp [not null]
    gratuito boolean [not null]
    id_tipo_evento BIGINT [not null, ref: > Tipo_Evento.id]
    id_endereco BIGINT [not null, ref: > Endereco.id]
    id_usuario BIGINT [not null, ref: > Usuario.id]
}

Table Tipo_Evento {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

// Avaliação da via
Table Avaliacao {
    id BIGINT [pk, increment]
    criado_em timestamp [default: `now()`]
    nota float [not null, default: 0]
    id_usuario BIGINT [not null, ref: > Usuario.id]
    id_infraestrutura_cicloviaria BIGINT [not null, ref: > Infraestrutura_Cicloviaria.id]
}

// Infraestrutura Cicloviária
Table Infraestrutura_Cicloviaria {
    id BIGINT [pk, increment]
    nota_media int [not null]
    criado_em timestamp [default: `now()`]
}

Table Infraestrutura_Cicloviaria_Filho {
    id BIGINT [pk, increment]
    id_tipo_infraestrutura_cicloviaria BIGINT [not null, ref: > Tipo_Infraestrutura_Cicloviaria.id]
    id_infraestrutura_pai BIGINT [not null, ref: > Infraestrutura_Cicloviaria.id]
    id_localizacao BIGINT [not null, ref: > Localizacao.id]
    criado_em timestamp [default: `now()`]
}

// Dados da via
Table Tipo_Infraestrutura_Cicloviaria {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

// Problemas na via
Table Problema {
    id BIGINT [pk, increment]
    descricao varchar(255) [not null]
    foto BLOB
    criado_em timestamp [default: `now()`]
    ativo boolean [not null]
    id_tipo_problema BIGINT [not null, ref: > Tipo_Problema.id]
    id_infraestrutura_cicloviaria BIGINT [not null, ref: > Infraestrutura_Cicloviaria.id]
}

Table Tipo_Problema {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

// Localização
Table Localizacao {
    id BIGINT [pk, increment]
    latitude varchar(255) [not null]
    longitude varchar(255) [not null]
    cep varchar(255) [not null]
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
    id_tipo_localizacao BIGINT [not null, ref: > Tipo_Localizacao.id]
}

Table Tipo_Localizacao {
    id BIGINT [pk, increment]
    nome varchar(255) [not null]
    descricao varchar(255) [not null]
}

// Configuracaoes de apis externas
Table Configuracao_Api {
    id BIGINT [pk, increment]
    nome varchar(255) [not null, unique]
    url varchar(255) [not null]
    chave varchar(255)
    criado_em timestamp [default: `now()`]
    atualizado_em timestamp
}